-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.7
-
None
-
-
14f3f419b0864944d75283a850dc0ce141feaf0e (qt/qtbase/dev) f919d9a2dad9412c64e74b19eee2b8429da2d3bb (qt/qtbase/5.12), ba2a5d693 (tqtc/lts-5.15)
Serializing a null QTimeZone crashes:
QByteArray blob;
QDataStream stream(&blob, QIODevice::WriteOnly);
stream << QTimeZone(); // CRASH!
Other other null objects like QDate and QTime are able to serialize/deserialize so QTimeZone should be able to as well.